--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bible</title>
+    <title>⸻Bible⸻</title>
     <style>
         body {
             background-color: #2E2E2E;
