--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <style>
         body {
             background-image: url('https://m.media-amazon.com/images/I/91DOC69GT1L.png');
-            background-size: cover;
+            background-size: 100% 100%;
             background-repeat: no-repeat;
-            background-position: center;
+            background-position: center center;
             color: #FFFFFF;
             font-family: 'Courier New', Courier, monospace;
             text-align: center;
