--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             background-image: url('https://m.media-amazon.com/images/I/91DOC69GT1L.png');
-            background-size: 100% 100%;
+            background-size: cover;
             background-repeat: no-repeat;
             background-position: center center;
             color: #FFFFFF;
