--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             background-image: url('https://m.media-amazon.com/images/I/91DOC69GT1L.png');
             background-size: cover;
             background-repeat: no-repeat;
-            background-position: center center;
+            background-position: center;
             color: #FFFFFF;
             font-family: 'Courier New', Courier, monospace;
             text-align: center;
@@ -113,7 +113,7 @@
 
         function downloadBibleVerse() {
             const verse = getRandomBibleVerse();
-            const randomNumber = Math.floor(Math.random() * 10000);
+            const randomNumber = Math.floor(Math.random() * 1000);
             const blob = new Blob([verse], { type: 'text/plain' });
             const url = URL.createObjectURL(blob);
             const a = document.createElement('a');
